updated hyperlink placeholder

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
 <div class="rooms-container">
   <div class="room-listing" ng-repeat="rooms in home.Room.all">
-    <a href="http://localhost:3000" target="_blank"class="room-name">{{rooms.$value}}
+    <a href="" class="room-name">{{rooms.$value}}
   </div>
 </div>
