--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,16 +5,54 @@ padding: 0;
 }
 
 html, body {
-  height: 100vh;
+  //height: 100vh;
+  min-height:100%;
+  font-family: 'Ubuntu', sans-serif;
 }
+
+header {
+  align-content: center;
+  width: 100%;
+
+}
+
 .main-title {
-  padding-bottom: 20px;
+  font-size: 35px;
+  padding: 10px;
+  display: inline;
+
 }
 
 .main-sidebar {
+  align-content: center;
   position: fixed;
   background-color: lightgray;
   width: 25vw;
   height: 100%;
   padding: 20px;
+}
+
+.new-room-button {
+  font-size: 13px;
+  color: gray;
+  position: fixed;
+  padding: 10px 15px 10px 15px;
+  border-radius: 6px;
+  background-color: white;
+
+}
+
+.new-room-modal {
+  background-color: lightgray;
+  position: fixed;
+  left: 40%;
+  top: 30%;
+  border-radius: 3px;
+  width: 300px;
+  height: 170px;
+  padding: 20px;
+}
+
+.btn {
+  padding: 5px;
 }
