--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,12 +12,12 @@ html, body {
 
 header {
   align-content: center;
-  width: 100%;
+  width: 25vw;
 
 }
 
 .main-title {
-  font-size: 35px;
+  font-size: 30px;
   padding: 10px;
   display: inline;
 
@@ -36,7 +36,7 @@ header {
   font-size: 13px;
   color: gray;
   position: fixed;
-  padding: 10px 15px 10px 15px;
+  padding: 5px 10px 5px 10px;
   border-radius: 6px;
   background-color: white;
 
@@ -44,15 +44,51 @@ header {
 
 .new-room-modal {
   background-color: lightgray;
+  align-content: center;
   position: fixed;
   left: 40%;
   top: 30%;
-  border-radius: 3px;
+  border-radius: 25px;
   width: 300px;
-  height: 170px;
-  padding: 20px;
+  height: 200px;
+
+}
+
+.modal-container {
+  height: 80%;
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.modal-title{
+  margin-bottom: 20px;
+}
+
+.new-room-input {
+  width: 170px;
+  height: 20px;
+  margin-top: 8px;
+
 }
 
 .btn {
-  padding: 5px;
+  /*padding: 12px 20px 12px 20px;*/
+  margin-top: 4px;
+  height: 40px;
+  width: 85px;
+  border-radius: 8px;
+
+}
+
+.btn:hover {
+  background-color: black;
+  color: white;
+}
+
+.add-room {
+  background-color: gray;
+  color: white;
 }
