--- a/app/templates/newRoomModal.html
+++ b/app/templates/newRoomModal.html
@@ -1,16 +1,18 @@
 
 
 <div class="new-room-modal">
+  <div class="modal-container">
   <div class="modal-header">
     <h2 class="modal-title">Create new room</h2>
   </div>
   <h3 class="modal-subtitle">Enter a room name</h3>
   <div class="modal-body">
-    <input type="text" ng-model="newRoom.newRoomInput" default="newRoom.newRoomInput">
-    <button type="button" ng-click="addRoom(newRoom.newRoomInput)" class="btn add-room">Add room</button>
+    <input type="text" ng-model="newRoom.newRoomInput" default="newRoom.newRoomInput" class="new-room-input">
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+    <!-- <button class="btn btn-primary" type="button" ng-click="ok()">OK</button> -->
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button type="button" ng-click="addRoom(newRoom.newRoomInput)" class="btn add-room">Create room</button>
   </div>
+</div>
 </div>
