updates from mentor session

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,11 +1,11 @@
 <div class="rooms-container">
-  <div class="room-listing" ng-repeat="rooms in home.rooms track by $index">
-    <a ng-click="home.displayRoom($index)" class="room-name">{{rooms.$value}}</a>
+  <div class="room-listing" ng-repeat="room in home.rooms track by $index">
+    <a ng-click="home.displayRoom(room)" class="room-name">{{room.$value}}</a>
   </div>
 </div>
 
 <div class="main-chat-view">
-  <div class="message-container" ng-repeat="messages in home.query track by $index">
+  <div class="message-container" ng-repeat="messages in home.messages track by $index">
     <div class="message-user"><b>User:</b> {{messages.username}}</div>
     <div class="message-date"><b>Date:</b> {{messages.sentAt}}</div>
     <div class="message-content">{{messages.content}}</div>
