--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -5,13 +5,17 @@
 }*/
 
 .room-listing {
-  padding: 15px 0 0 15px;
+  padding: 15px 15px 15px 15px;
+
 
 }
 .room-name {
   font-size: 20px;
-  color: gray;
+  color: black;
   text-decoration: none;
-
-
+  padding: 8px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 2px 2px 1px #000000;
+  border: 3px solid black;
 }
