--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,6 +8,7 @@ html, body {
   //height: 100vh;
   min-height:100%;
   font-family: 'Ubuntu', sans-serif;
+  background-color: #bfbfbf;
 }
 
 header {
@@ -26,15 +27,17 @@ header {
 .main-sidebar {
   align-content: center;
   position: fixed;
-  background-color: lightgray;
+  background-color: #66c2ff;
   width: 24%;
   height: 100%;
+  padding: 8px;
+  box-shadow: 5px 5px 3px #888888;
 
 }
 
 .new-room-button {
   font-size: 13px;
-  color: gray;
+  color: black;
   position: fixed;
   padding: 5px 10px 5px 10px;
   border-radius: 6px;
@@ -102,15 +105,17 @@ header {
   left: 25%;
   top: 0;
 
+
+
 }
 
 .message-container {
-  background-color: lightgray;
+  background-color: #66c2ff;
   padding: 8px;
   margin: 8px;
   border: 1px solid black;
   border-radius: 0 10px 10px 10px;
-  box-shadow: 5px 5px 3px #888888;
+  box-shadow: 5px 5px 3px #000000;
 }
 
 .message-user {
