--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,6 @@
 <div class="rooms-container">
-  <div class="room-listing" ng-repeat="room in home.rooms track by $index">
-    <a ng-click="home.displayRoom(room)" class="room-name">{{room.$value}}</a>
+  <div class="room-listing" ng-repeat="room in home.rooms track by $index" ng-click="home.displayRoom(room)">
+    <a  class="room-name">{{room.$value}}</a>
   </div>
 </div>
 
