--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -1,21 +1,101 @@
-/*.rooms-container {
-  background-color: gray;
-  width: fit-content;
-  height: 500px;
-}*/
 
-.room-listing {
-  padding: 15px 15px 15px 15px;
+@media (max-width: 700px) {
+
+  .main-chat-view {
+
+    right: 2%;
+
+ }
+
+}
+
+
+.rooms-container {
+  background-color: gray;
+  width: 75%;
+  align-content: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  box-shadow: 3px 3px 3px #000000 inset;
+  border-radius: 3px;
+  height: 70%;
+  overflow: auto;
+  border: 3px solid black;
 
 
 }
-.room-name {
-  font-size: 20px;
-  color: black;
-  text-decoration: none;
-  padding: 8px;
+
+.room-listing {
+  padding: 15px 10px 10px 15px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: 8px;
   background-color: white;
-  border-radius: 8px;
+  /*border-radius: 8px;*/
   box-shadow: 2px 2px 1px #000000;
   border: 3px solid black;
+  overflow: auto;
+  background: linear-gradient(white, yellow);
+}
+
+.room-listing:hover {
+  background: linear-gradient(yellow, white);
+}
+
+.room-name {
+  text-align: center;
+  font-size: 25px;
+  color: black;
+  text-decoration: none;
+  font-family: 'Marcellus SC', serif;
+}
+
+
+.main-chat-view {
+  position: fixed;
+  height: 88vh;
+  width: 65vw;
+  top: 3.8%;
+  right: 10%;
+  /*bottom: 2%;*/
+  z-index: 300;
+  overflow: auto;
+
+
+
+}
+
+.message-container {
+  background-color: #66c2ff;
+  margin-bottom: 14px;
+  padding: 5px;
+  border: 3px solid black;
+  border-radius: 0 20px 20px 20px;
+  box-shadow: 9px 9px 10px #00000b;
+  /*position: relative;*/
+  z-index: 200;
+
+}
+
+.message-user {
+  font-size: 15px;
+}
+
+.message-date {
+  display: inline-block;
+  font-size: 15px;
+
+}
+
+.message-content {
+  font-size: 25px;
+  text-align: center;
+  color: #ffe419;
+  font-family: 'Contrail One', cursive;
 }
