--- a/app/templates/newRoomModal.html
+++ b/app/templates/newRoomModal.html
@@ -11,7 +11,7 @@
   </div>
   <div class="modal-footer">
     <!-- <button class="btn btn-primary" type="button" ng-click="ok()">OK</button> -->
-    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-warning" type="button" ng-click="newRoom.cancel()">Cancel</button>
     <button type="button" ng-click="newRoom.addRoom(newRoom.newRoomInput)" class="btn add-room">Create room</button>
   </div>
 </div>
