--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -66,8 +66,24 @@
   /*bottom: 2%;*/
   z-index: 300;
   overflow: auto;
+}
 
+.chat-send {
+  position: fixed;
+  z-index: 900;
+  left: 20.5%;
+  bottom: 2%;
+  width: 57vw;
+  border: 3px solid black;
+  background-color: #bcbfc4;
+  border-radius: 10px;
+  padding: 10px;
+}
 
+.room-message-input {
+  height: 5vh;
+  width: 85%;
+  display: inline;
 
 }
 
