--- a/app/templates/newRoomModal.html
+++ b/app/templates/newRoomModal.html
@@ -7,7 +7,7 @@
   </div>
   <h3 class="modal-subtitle">Enter a room name</h3>
   <div class="modal-body">
-    <input type="text" ng-model="newRoom.newRoomInput" placeholder="Name your room" class="new-room-input">
+    <input type="text" ng-model="newRoom.newRoomInput" placeholder="Name your room" class="new-room-input" ng-keypress="$event.keyCode == 13 && newRoom.addRoom(newRoom.newRoomInput)">
   </div>
   <div class="modal-footer">
     <!-- <button class="btn btn-primary" type="button" ng-click="ok()">OK</button> -->
